Refactor class instantiation and streamline list operations
The commit switches to the more specific getDeclaredConstructor().newInstance() for class instantiation throughout the files for safer and more exact construction. Simultaneously, it optimizes list operations using method references. It further handles InvocationTargetException during class instantiation, improving exception handling.